# rescuetime-mcp

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  manifest.json  pyproject.toml  rescuetime-mcp.mcpb  server.json  server.py
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: test.yml
hooks/: install-ping.py
src/rescuetime_mcp/: __init__.py  client.py  models.py  server.py
tests/: test_ssrf.py
