[project]
name = "rescuetime-mcp"
version = "0.2.0"
description = "MCP server for RescueTime productivity data"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.2.0",
    "httpx",
    "pydantic>=2.0",
    "python-dotenv",
    # SSRF hardening for outbound RescueTime API fetch (MYC-101).
    "mycelium-security @ git+https://github.com/adelaidasofia/mycelium-security.git@v0.1.0",
]

[project.scripts]
rescuetime-mcp = "rescuetime_mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
# Allow `mycelium-security @ git+https://...` until trusted publisher
# ships the package to PyPI (then we can flip to `mycelium-security>=0.1.0`).
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/rescuetime_mcp"]
